Added an image and updated a couple parts that were missed previously.

--- a/Module6_lists_and_tuples.ipynb
+++ b/Module6_lists_and_tuples.ipynb
@@ -40,6 +40,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "Zhf5vzIRS9y6"
+      },
+      "source": [
+        "<img src='https://images.pexels.com/photos/131979/pexels-photo-131979.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260' width=700>\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "1_Z_JpWjb1Vq"
       },
       "source": [
@@ -211,22 +220,20 @@
       },
       "source": [
         "**i. Concatenation**  \n",
-        "Just like strings, lists can be joined together (concatenated). In the cell below, I've done the following:\n",
+        "Just like strings, lists can be joined together (concatenated). In the cell below, the following have been done:\n",
         "\n",
         "1. Create the variable `fav_tops1` and assign it a list of your two favorite ice cream sundae toppings\n",
         "2. Create the variable `fav_tops2` and assign it a list of your group member's two favorite toppings\n",
         "3. Create the variable `our_tops` and assign it the concatenation of `fav_tops1` and `fav_tops2`\n",
-        "4. Type `our_tops` to ensure that the new list looks like you expect it to "
+        "4. Type `our_tops` to ensure that the new list looks like you expect it to  \n",
+        "\n",
+        "Run the cell and confirm that the output is what you expect."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5A-tTUM1b1Vz",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "689b867d-cb64-45c1-e8b9-022cb5a2d723"
+        "id": "5A-tTUM1b1Vz"
       },
       "source": [
         "fav_tops1 = ['oreos', 'chocolate sprinkles']\n",
@@ -235,18 +242,7 @@
         "our_tops"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['oreos', 'chocolate sprinkles', 'caramel', 'peanuts']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -255,42 +251,22 @@
       },
       "source": [
         "**ii. Copies**  \n",
-        "Multiple copies of a list can be created, similar to how you created multiple copies of a string. In the cell below, create the variable `dubs` and assign it two copies of `our_tops`. Type `dubs` to ensure that the new list looks like you expect it to."
+        "Multiple copies of a list can be created, similar to how you created multiple copies of a string. In the cell below, the variable `dubs` has been created and two copies of `our_tops` has been assign to it.  \n",
+        "\n",
+        "Again, run the cell to ensure the output is what you expect."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7TP6bJ8Jb1V2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5db78b95-764a-4829-d010-c4eded2c9900"
+        "id": "7TP6bJ8Jb1V2"
       },
       "source": [
         "dubs = our_tops * 2\n",
         "dubs"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['oreos',\n",
-              " 'chocolate sprinkles',\n",
-              " 'caramel',\n",
-              " 'peanuts',\n",
-              " 'oreos',\n",
-              " 'chocolate sprinkles',\n",
-              " 'caramel',\n",
-              " 'peanuts']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -299,37 +275,9 @@
       },
       "source": [
         "**iii. Min and max**  \n",
-        "For lists containing either numbers or strings (but not a mix of both), you can use the `min()` and `max()` functions. In the cells below, write and evaluate an expression that determines the minimum topping (i.e., earliest in the alphabet) in the list `our_tops`."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2w5uigg_b1V5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "db547b70-741f-4f47-dc8c-6fc9f6e25b1e"
-      },
-      "source": [
-        "min(our_tops)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'caramel'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 5
-        }
+        "For lists containing either numbers or strings (but not a mix of both), you can use the `min()` and `max()` functions. Remember, for strings, min and max refer to alphabetical order.  \n",
+        "\n",
+        "In the cells below, two lists, one of numbers and one of floats, have been created. Run the cells to see the max price and the alphabetically earliest name."
       ]
     },
     {
@@ -347,33 +295,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "dLt1MYiPTri8",
-        "outputId": "bd398526-bfa9-4739-ef97-5be3a94e71ca"
+        "id": "dLt1MYiPTri8"
       },
       "source": [
         "names = ['Aurora', 'Natalia', 'Isabella', 'Emilia']\n",
         "min(names)"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'Aurora'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 5
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -382,42 +311,18 @@
       },
       "source": [
         "**iv. Sum**  \n",
-        "For lists containing numbers, you can use the `sum()` function to determine the sum of all values in the list. Using the `sum()` function in the cell below, determine the sum of the numbers in the list `odd_nums` from above."
+        "For lists containing numbers, you can use the `sum()` function to determine the sum of all values in the list.  \n",
+        "\n",
+        "Run the cell below to determine the sum of the list of odd numbers defined earlier in this module."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "07s99uR2b1V8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "df81736d-edf5-4a3e-b90f-99307a36de36"
+        "id": "07s99uR2b1V8"
       },
       "source": [
         "sum(odd_nums)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "25"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ZHuz8UW3T_zj"
-      },
-      "source": [
-        "sum(prices)"
       ],
       "execution_count": null,
       "outputs": []
@@ -428,8 +333,11 @@
         "id": "a3muCjEyoKJf"
       },
       "source": [
+        "###Now it's your turn.  \n",
+        "Try to do these on your own if possible, but if you need help, refer to the section mentioned in each exercise.\n",
+        "\n",
         "<font color='red'>Exercise 3</font>  \n",
-        "In the cell below, complete the following (refer to part i. of this section if you need help):  \n",
+        "In the cell below, complete the following (part i. of this section):  \n",
         "1. Create the variable `common_pets` and assign it a list of two common pets people keep.\n",
         "2. Create the variable `uncommon_pets` and assign it a list of two less common pets people keep.\n",
         "3. Create the variable `all_pets` and assign it the concatenation of `common_pets` and `uncommon_pets`.\n",
@@ -652,7 +560,7 @@
       "source": [
         "names[-3]"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -682,7 +590,7 @@
         "names[-3] = 'Octavia'\n",
         "names"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
