--- a/Module6_lists_and_tuples.ipynb
+++ b/Module6_lists_and_tuples.ipynb
@@ -43,7 +43,8 @@
         "id": "Zhf5vzIRS9y6"
       },
       "source": [
-        "<img src='https://images.pexels.com/photos/131979/pexels-photo-131979.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260' width=700>\n"
+        "<img src='https://images.pexels.com/photos/131979/pexels-photo-131979.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260' width=700>  \n",
+        "Photo by freestocks.org from Pexels\n"
       ]
     },
     {
@@ -56,7 +57,7 @@
         "\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Nov 22, 2021  \n",
+        "Last updated: Dec 5, 2021  \n",
         "\n",
         "**Learning outcomes**  \n",
         "To learn about variables:  \n"
