Added photo attribution

--- a/Module5_string_operations.ipynb
+++ b/Module5_string_operations.ipynb
@@ -43,7 +43,8 @@
         "id": "tcP2h0QW0A6X"
       },
       "source": [
-        "<img src='https://cdn.pixabay.com/photo/2020/04/21/16/41/threads-5073817_1280.jpg' width=700>  "
+        "<img src='https://cdn.pixabay.com/photo/2020/04/21/16/41/threads-5073817_1280.jpg' width=700>   \n",
+        "Photo by ds_30 from Pixabay"
       ]
     },
     {
@@ -55,7 +56,7 @@
         "# APEX Faculty Training, Module 5: String Operations\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Nov 14, 2021  \n",
+        "Last updated: Dec 5, 2021  \n",
         "\n",
         "**Learning outcomes**  \n",
         "1. "
