Added photo attribution

--- a/Module4_strings.ipynb
+++ b/Module4_strings.ipynb
@@ -43,7 +43,8 @@
         "id": "tcP2h0QW0A6X"
       },
       "source": [
-        "<img src='https://images.pexels.com/photos/247819/pexels-photo-247819.jpeg?w=700&h=250&fit=crop' height=300px witdth=700px>  "
+        "<img src='https://images.pexels.com/photos/247819/pexels-photo-247819.jpeg?w=700&h=250&fit=crop' height=300px witdth=700px>  \n",
+        "Photo by Wokandapix from Pixabay"
       ]
     },
     {
