Added photo attribution

--- a/Module3_variables.ipynb
+++ b/Module3_variables.ipynb
@@ -52,7 +52,8 @@
         "id": "d4RBrWC-jk0h"
       },
       "source": [
-        "<img src='https://cdn.pixabay.com/photo/2017/01/12/21/19/search-1975707_1280.jpg' width=700>"
+        "<img src='https://cdn.pixabay.com/photo/2017/01/12/21/19/search-1975707_1280.jpg' width=700>  \n",
+        "Photo by damirbelavic from Pixabay"
       ]
     },
     {
@@ -65,7 +66,7 @@
         "\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Nov 28, 2021  \n",
+        "Last updated: Dec 5, 2021  \n",
         "\n",
         "**Learning outcomes**  \n",
         "* To practice assigning values to variables and using variables in expressions\n",
