Added photo attribution

--- a/Module2_datatypes.ipynb
+++ b/Module2_datatypes.ipynb
@@ -52,7 +52,8 @@
         "id": "dH0hUpuHsdPg"
       },
       "source": [
-        "<img src='https://cdn.pixabay.com/photo/2018/11/17/12/27/mathematics-3821034_1280.jpg' width=700>\n",
+        "<img src='https://cdn.pixabay.com/photo/2018/11/17/12/27/mathematics-3821034_1280.jpg' width=700>  \n",
+        "Photo by ArtsyBee from Pixabay\n",
         "\n"
       ]
     },
@@ -65,7 +66,7 @@
         "# APEX Faculty Training, Module 2: Datatypes\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Nov 14, 2021 \n",
+        "Last updated: Dec 5, 2021 \n",
         "\n",
         "**Learning Outcomes**:  \n",
         "1. To learn about different different Python data types, including integers and floats\n",
