--- a/Module2_datatypes.ipynb
+++ b/Module2_datatypes.ipynb
@@ -112,7 +112,7 @@
         "id": "eGtiFVkADcqf"
       },
       "source": [
-        "## 2. Mathematical expressions  \n",
+        "## 3. Mathematical expressions  \n",
         "\n",
         "Mathematical expressions are essentially using Python like a calculator. In Python, it is standard to type a space before and after each operator. This helps with easier readability of your code. See below for some simple examples.\n",
         "  \n",
@@ -144,7 +144,7 @@
         "id": "U7VrhoeZwQdd"
       },
       "source": [
-        "### 2a. Math whiz\n",
+        "### 3a. Math whiz\n",
         "Write code for each of the following exercises, making sure to run each cell when you're done writing your code.\n",
         "\n",
         "<font color='red'>Exercise 1</font>  \n",
@@ -210,7 +210,7 @@
         "id": "CK4M1Cs7HehN"
       },
       "source": [
-        "### 2b. Which data type?\n",
+        "### 3b. Which data type?\n",
         "You may have noticed that some of the expressions above returned integers, whereas others returned floats. \n",
         "\n",
         "Here are the rules for `int` and `float`:  \n",
@@ -225,28 +225,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rK_8uUa79z3Y",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bd7078e1-dd6c-4bfc-f61f-f96e084828ee"
+        "id": "rK_8uUa79z3Y"
       },
       "source": [
         "2 + 1"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -273,28 +258,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SVYeewwm9x2K",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6425174f-07b6-4491-cc8b-ed8be121dec5"
+        "id": "SVYeewwm9x2K"
       },
       "source": [
         "9 / 3"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 16
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -302,7 +272,7 @@
         "id": "qDHEh4quIJH-"
       },
       "source": [
-        "### 2c. Order of operations\n",
+        "### 3c. Order of operations\n",
         "Python follows the same order of operations rule as algebra:  \n",
         "* PEMDAS (Parentheses, Exponents, Multiplication/Division, Addition/Subtraction)  \n",
         "* All else being equal, left to right\n",
@@ -314,51 +284,15 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "z6ji95ZVDcqw"
-      },
-      "source": [
-        "### 2c. Order of operations\n",
-        "Python follows the same order of operations rule as algebra:  \n",
-        "* PEMDAS (Parentheses, Exponents, Multiplication/Division, Addition/Subtraction)  \n",
-        "* All else being equal, left to right  "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "L0dNU8RaAsk7"
-      },
-      "source": [
-        "While not always necessary, parentheses can be helpful for clarification for human readers. Add parentheses to the expression below to help clarify the order of operations, ensuring that your answer is 24."
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "QSl75pCwDcqw",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "004527b2-e8b1-4acc-903a-947397ea5ac4"
+        "id": "QSl75pCwDcqw"
       },
       "source": [
         "20 * 1 + 2 ** 2"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "24"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -366,7 +300,7 @@
         "id": "ClVVERidDcqy"
       },
       "source": [
-        "### 2d. Built-in functions\n",
+        "### 3e. Built-in functions\n",
         "Python has several helpful math-related functions. See below for a few simple examples.  \n",
         "* Absolute Value:  \n",
         "  `abs(-4)`  \n",
@@ -383,28 +317,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6Sxf0gibDcqz",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "01be71e9-45fe-4b23-d157-e423899020e9"
+        "id": "6Sxf0gibDcqz"
       },
       "source": [
         ""
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "5"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 9
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -419,28 +338,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rdM6rOpvDcq1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "fa1c9285-bb67-4add-b007-3e64640dfc80"
+        "id": "rdM6rOpvDcq1"
       },
       "source": [
         ""
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "71"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -455,28 +359,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-jMffkdcDcq3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "83384185-f33d-4282-c9c7-4a1145e6c05e"
+        "id": "-jMffkdcDcq3"
       },
       "source": [
         ""
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3.49"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 11
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -484,11 +373,11 @@
         "id": "A16PMuKtDcq5"
       },
       "source": [
-        "## 3. Boolean expressions\n",
+        "## 4. Boolean expressions\n",
         "\n",
         "A Boolean expression is a type of numeric expression that evaluates to `True` or `False`. \n",
         "\n",
-        "### 3a. Basic Boolean operators\n",
+        "### 4a. Basic Boolean operators\n",
         "  \n",
         "Here are the basic Boolean operators:  \n",
         "  \n",
@@ -527,28 +416,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0Ri5U_7WKVNf",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "819d88f5-096e-4783-eca8-3fa97807b7f9"
+        "id": "0Ri5U_7WKVNf"
       },
       "source": [
         "2 * max(14, 3, 9, 17, 11) == 7 + 3 * 9"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 23
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -574,28 +448,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qWi1OQIlDcq5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3c1ecdc2-d699-4c7f-f795-846e7d75dea9"
+        "id": "qWi1OQIlDcq5"
       },
       "source": [
         ""
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 12
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -610,28 +469,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UwWSKVe4Dcq8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7f0c0677-012c-405f-e4c4-69749ad165ed"
+        "id": "UwWSKVe4Dcq8"
       },
       "source": [
         ""
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 13
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -639,7 +483,7 @@
         "id": "_MFIJ53KDcq-"
       },
       "source": [
-        "### 3b. `and`, `or`, and `not`  \n",
+        "### 4b. `and`, `or`, and `not`  \n",
         "Boolean expressions can be combined using the `and`, `or`, and `not` operators.  \n",
         "  \n",
         "* The `and` operator evaluates to `True` if **both** Boolean expressions are `True` and `False` otherwise.  \n",
@@ -669,80 +513,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_cvqsVbQDcq-",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a310f53c-fa42-49a9-ce10-69be05b2c293"
+        "id": "_cvqsVbQDcq-"
       },
       "source": [
         "# and\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "u881zrnLDcrA",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b870cae6-6798-4b7b-8274-1ef8e1438c40"
+        "id": "u881zrnLDcrA"
       },
       "source": [
         "# or\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 16
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "35sopS0nDcrC",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "cc7ec9bb-d40f-440b-b2b3-4f8f1e23c857"
+        "id": "35sopS0nDcrC"
       },
       "source": [
         "# not\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 17
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -753,261 +552,6 @@
       "source": [
         "## Congrats, you're done! \n",
         "At this point, you've learned the basics of Python datatypes, mathematical and Boolean expressions, variable names, and assignment. If you'd like more practice with these concepts, simply continue below. Next, we'll learn about variables."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "whNRxjERDcrZ"
-      },
-      "source": [
-        "### Mathematical expressions  \n",
-        "In the cells below, write expressions for each of the following, and run the cells:\n",
-        "* The quotient for the number of times the current year can be divided by 100 \n",
-        "* The remainder of the above expression"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "aULWAiWYDcra",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "269b0fb4-adaa-436d-e383-5fffa60fec3a"
-      },
-      "source": [
-        "# Practice 1) Quotient\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "20"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 26
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YVhk_etLDcrb",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "1ac8e6d3-db6f-4b20-fa93-96ef1a0ce19e"
-      },
-      "source": [
-        "# Practice 2) Remainder\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "21"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 34
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "P_FORhr1Dcrd"
-      },
-      "source": [
-        "### Data types\n",
-        "Write expressions for each of the following. Do you understand why both return floats?\n",
-        "* 6 divided by 2\n",
-        "* 6.0 divided by 2.0"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "lU09bz4qDcre",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "212c34f4-4d45-49f3-a35b-899c503dfb63"
-      },
-      "source": [
-        "# Practice 3) 6 divided by 2\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 28
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_6EObJDLDcrg",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b1ec8f6d-280e-4b86-b0e3-ad9caf79b07d"
-      },
-      "source": [
-        "# Practice 4) 6.0 divided by 2.0\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 35
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "1XOrdHJLDcri"
-      },
-      "source": [
-        "### Order of operations\n",
-        "In the cell below, re-write the following expression to include parentheses to help clarify the order of operations, ensuring that your answer is correct (18.0):\n",
-        "* 10 / 5 + 3 * 6 - 2"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "wB7ZPS0ZDcri",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6a66c1d0-6826-4ba6-8a76-0d38465d4d15"
-      },
-      "source": [
-        "# Practice 5) 10 / 5 + 3 * 6 - 2 with parentheses\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "18.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 36
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "tAI7cCJSDcrk"
-      },
-      "source": [
-        "### Boolean expressions\n",
-        "Look back at the expressions you wrote for 3b above. How would you edit these to obtain the opposite answer? I.e., if your original expression returned `True`, edit it so that it now returns `False`.  \n",
-        " \n",
-        " For instance, if your original statement for `and` was `1 + 1 == 2 and 1 > 3` Python would have returned `False`. You could change the result in various ways, including changing the last 1 to a 10: `1 + 1 == 2 and 10 > 3` returns `True`."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "d1sYFTP1Dcrk",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "eb37d067-02fd-4d58-dd01-877695746e20"
-      },
-      "source": [
-        "# Practice 6) and - different result\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 31
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TE79dmDVDcrm",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "decbe132-63ce-48d2-d05e-6677ee0e7e89"
-      },
-      "source": [
-        "# Practice 7) or - different result\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 32
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oQTiBNdODcru",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b78da07b-ced2-4424-9afc-745304424499"
-      },
-      "source": [
-        "# Practice 8) not - different result\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 33
-        }
       ]
     }
   ]
